--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.15.3",
     "swr": "^2.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
