--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.17",
     "next": "14.1.0",
     "postcss": "^8.4.35",
