--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.17",
+    "lucide-react": "^0.513.0",
     "next": "14.1.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
